// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render overlay with a URL 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_url *
      </label>
      <div
        class="url"
      >
        <div
          class="protocols"
        >
          <div
            class="select"
            role="none"
          >
            <button
              class="displayValue flat"
              type="button"
            >
              <div
                aria-label="http://"
                class="croppedText"
                title="http://"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  http
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    ://
                  </span>
                </div>
                <div
                  class="whole"
                >
                  http://
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="su-angle-down toggle"
              />
            </button>
          </div>
        </div>
        <input
          type="text"
          value="www.sulu.io"
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_target *
      </label>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue default"
          type="button"
        >
          <div
            aria-label="sulu_admin.please_choose"
            class="croppedText"
            title="sulu_admin.please_choose"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              sulu_admin.p
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                lease_choose
              </span>
            </div>
            <div
              class="whole"
            >
              sulu_admin.please_choose
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_title
      </label>
      <div
        class="input default left"
      >
        <input
          type="text"
          value=""
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        tabindex="-1"
      >
        <span
          class="switch toggler"
        >
          <input
            type="checkbox"
            value=""
          />
          <span />
        </span>
        <div>
          sulu_admin.no_follow
        </div>
      </label>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Render overlay with an undefined URL 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_url *
      </label>
      <div
        class="url"
      >
        <div
          class="protocols"
        >
          <div
            class="select"
            role="none"
          >
            <button
              class="displayValue flat"
              type="button"
            >
              <div
                aria-label="https://"
                class="croppedText"
                title="https://"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  http
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    s://
                  </span>
                </div>
                <div
                  class="whole"
                >
                  https://
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="su-angle-down toggle"
              />
            </button>
          </div>
        </div>
        <input
          type="text"
          value=""
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_target *
      </label>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue default"
          type="button"
        >
          <div
            aria-label="sulu_admin.please_choose"
            class="croppedText"
            title="sulu_admin.please_choose"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              sulu_admin.p
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                lease_choose
              </span>
            </div>
            <div
              class="whole"
            >
              sulu_admin.please_choose
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_title
      </label>
      <div
        class="input default left"
      >
        <input
          type="text"
          value=""
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        tabindex="-1"
      >
        <span
          class="switch toggler"
        >
          <input
            type="checkbox"
            value=""
          />
          <span />
        </span>
        <div>
          sulu_admin.no_follow
        </div>
      </label>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Render overlay with mailto URL 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_url *
      </label>
      <div
        class="url"
      >
        <div
          class="protocols"
        >
          <div
            class="select"
            role="none"
          >
            <button
              class="displayValue flat"
              type="button"
            >
              <div
                aria-label="mailto:"
                class="croppedText"
                title="mailto:"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  mail
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    to:
                  </span>
                </div>
                <div
                  class="whole"
                >
                  mailto:
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="su-angle-down toggle"
              />
            </button>
          </div>
        </div>
        <input
          type="text"
          value="test@example.org"
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.mail_subject
      </label>
      <div
        class="input default left"
      >
        <input
          type="text"
          value="Subject"
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.mail_body
      </label>
      <textarea
        class="textArea"
      >
        Body
      </textarea>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        sulu_admin.link_title
      </label>
      <div
        class="input default left"
      >
        <input
          type="text"
          value=""
        />
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        tabindex="-1"
      >
        <span
          class="switch toggler"
        >
          <input
            type="checkbox"
            value=""
          />
          <span />
        </span>
        <div>
          sulu_admin.no_follow
        </div>
      </label>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;
